added my background

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="final.css">
 	</head>
 	
-	<body background="Blue">
+	<body background="images/header-bg.jpg">
 		<h1>Final for Java Class</h1>
 		<h2>Examples on how Java works</h2>
 		
